# wasm-faker

./: Cargo.toml  README.md  faker.wai
src/: lib.rs
src/data/: first_names.rs  last_names.rs
