[package]
name = "faker"
version = "0.4.0"
edition = "2021"
description = "Generate fake data for testing and development."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wapm]
namespace = "travishorn"
abi = "none"
bindings = { wai-version = "0.1.0", exports = "faker.wai" }

[dependencies]
getrandom = { version = "0.2.2", features = ["js"] }
rand = "0.8.5"
wai-bindgen-rust = "0.2.3"
