[package]
name = "faker"
version = "0.5.0"
authors = ["Travis Horn <travis@travishorn.com"]
edition = "2021"
description = "Generate fake data for testing and development."
documentation = "https://github.com/travishorn/wasm-faker#readme"
homepage = "https://github.com/travishorn/wasm-faker"
repository = "https://github.com/travishorn/wasm-faker"
license = "MIT"
keywords = ["fake", "data", "generator"]
categories = ["development-tools", "simulation", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wapm]
namespace = "travishorn"
abi = "none"
bindings = { wai-version = "0.1.0", exports = "faker.wai" }

[dependencies]
getrandom = { version = "0.2.2", features = ["js"] }
rand = "0.8.5"
wai-bindgen-rust = "0.2.3"
